@@ -49,6 +49,9 @@ require 'active_merchant/lib/requires_parameters'
 # Require the country class
 require 'active_merchant/lib/country'
 
+# Address Verification
+require 'active_merchant/billing/avs'
+
 # CreditCard Utility class. 
 require 'active_merchant/billing/credit_card_methods'
 require 'active_merchant/billing/credit_card_formatting'
